# digital_match_altay

./: .gitignore  README.md  pyproject.toml
notebooks/: ds_look.ipynb  find_columns_vac.ipynb  find_method.ipynb  neiro.ipynb  neiro_find_columns copy.ipynb  neiro_find_columns.ipynb  neiro_find_columns_sklearn.ipynb  prepare_testDS.ipynb  prepare_trainDS.ipynb  students_baseline.ipynb  tensor.ipynb  test.ipynb
notebooks/data/: .~lock.train_dataset_train.csv#  codes.yaml
